libece 0.3a-wip (DD/MM/YYYY):
	- bindings: basic swig-based python bindings
	- fixes: minor leak in Client::run; ECE_RC_TIMEOUT sometimes not being returned;
	  remove spurious getHwInfo in __name_cb(); removed old json Content-Type
	- config: improved defaults handling
	- build: runtime prefix by setting ECE_PREFIX_PATH
	- test/sb += automated credential generation and SB simulator setup
	- crypto: ece_crypto_genkey() failed if no rnd file was detected
	- yocto wip: added LICENSE file
	- ece_revision() returns GIT commit ID
	- contrib: produce.sh extensions
	- SB API: getInfo returns Operation CA Cert; s/csr_tmpl/csr_template
	- added .gitignore

libece 0.2a (02/09/2013):
	- QtJson (GPL) -> QJson (LGPL)
	- contrib: produce.sh - basic keygen + csr tool
	- test/sb += double-CA/SNI test case
	- SB Json error logging
	- SB API: POST plain string parameters instead of Json

libece 0.1a (16/08/2013):
	- first alpha release for testing/integration