@@ -10,6 +10,7 @@ namespace EceUtils {
 
 ECE_DLLSPEC QString getHwInfo (void);
 ECE_DLLSPEC QDateTime pytime2DateTime (QString pydate);
+ECE_DLLSPEC QByteArray encodeQueryItem (QString pydate);
 
 } // namespace EceUtils
 
