@@ -1,7 +1,8 @@
 libece 0.3a-wip (DD/MM/YYYY):
 	- bindings: basic swig-based python bindings
 	- fixes: minor leak in Client::run; ECE_RC_TIMEOUT sometimes not being returned;
-	  remove spurious getHwInfo in __name_cb(); removed old json Content-Type
+	  remove spurious getHwInfo in __name_cb(); removed old json Content-Type;
+	  fix encoding of special chars not handled by addQueryItem() - e.g. newline
 	- config: improved defaults handling
 	- build: runtime prefix by setting ECE_PREFIX_PATH
 	- test/sb += automated credential generation and SB simulator setup
